Fixed wrapping issue on workers section
with small screens the workers where going out of the box
now the issue is fixed putting a min-height of 500px

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ button:hover{
     flex-wrap: wrap;
     gap: 52px;
     width: 100%;
-    height: 500px;
+    min-height: 500px;
     background-color: #333;
     color: greenyellow;
     padding: 30px;
